// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view-tab-widgets Renders \`view-tab-widgets\` with default and required props 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <!---->
  <div
    class="grid-layout grid-layout--disabled"
    style="padding: 20px; column-gap: 20px; grid-template-columns: repeat(12, 1fr); max-width: 100%;"
  >
    <!---->
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with editing mode 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
    
        Portal to: additional-top-bar-items
        
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 20px; max-width: 100%;"
  >
    <div
      class="grid-item grid-layout__placeholder v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <!---->
  <div
    class="grid-layout grid-layout--disabled"
    style="padding: 20px; column-gap: 20px; grid-template-columns: repeat(12, 1fr); max-width: 100%;"
  >
    <!---->
    <div
      class="grid-item v-card v-sheet theme--light grid-item--disabled"
      style="margin: 20px 0px; grid-column-start: 1; grid-column-end: 13; grid-row-start: 1; grid-row-end: 15; height: auto;"
    >
      <div>
        <!---->
        <widget-wrapper-stub
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <!---->
    </div>
    <div
      class="grid-item v-card v-sheet theme--light grid-item--disabled"
      style="margin: 20px 0px; grid-column-start: 1; grid-column-end: 13; grid-row-start: 15; grid-row-end: 39; height: auto;"
    >
      <div>
        <!---->
        <widget-wrapper-stub
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <!---->
    </div>
    <div
      class="grid-item v-card v-sheet theme--light grid-item--disabled"
      style="margin: 20px 0px; grid-column-start: 1; grid-column-end: 13; grid-row-start: 39; grid-row-end: 60; height: auto;"
    >
      <div>
        <!---->
        <widget-wrapper-stub
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets on 'l' window size 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
    
        Portal to: additional-top-bar-items
        
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 1260px; max-width: 100%;"
  >
    <div
      class="grid-item grid-layout__placeholder v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 280px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,320px, 0); width: -40px; height: 480px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,800px, 0); width: -40px; height: 420px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets on 'm' window size 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
    
        Portal to: additional-top-bar-items
        
    <window-size-field-stub
      color="white"
      light="true"
      value="mobile"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 320px; max-width: 450px;"
  >
    <div
      class="grid-item grid-layout__placeholder v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -25px; height: 240px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -25px; height: 240px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,280px, 0); width: -40px; height: 20px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets on 't' window size 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
    
        Portal to: additional-top-bar-items
        
    <window-size-field-stub
      color="white"
      light="true"
      value="tablet"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 100px; max-width: 900px;"
  >
    <div
      class="grid-item grid-layout__placeholder v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 20px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 20px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,60px, 0); width: -40px; height: 20px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets on 'xl' window size 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
    
        Portal to: additional-top-bar-items
        
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 1260px; max-width: 100%;"
  >
    <div
      class="grid-item grid-layout__placeholder v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 280px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,320px, 0); width: -40px; height: 480px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,800px, 0); width: -40px; height: 420px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets with editing mode 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
    
        Portal to: additional-top-bar-items
        
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 1260px; max-width: 100%;"
  >
    <div
      class="grid-item grid-layout__placeholder v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 280px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,320px, 0); width: -40px; height: 480px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,800px, 0); width: -40px; height: 420px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          $vuetify.icons.resize_right
        </i>
      </div>
    </div>
  </div>
</div>
`;
